--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
     <title>404</title>
 </head>
 <body>
-    <h1>404 Not Found</h1>
+    <h1>404</h1>
+    <p>Resource not found</p>
 </body>
 </html>
