--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello!</h1>
-    <p>I'm a Rust Web Application</p>
+    <p>I'm a Rust Web Application running on Heroku</p>
 </body>
 </html>
